--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -248,6 +248,7 @@
   margin-right: 8px;
   font-family: Arial, Helvetica, sans-serif;
   resize: vertical;
+  font-size: 13px;
   @media only screen and (min-width: $break-m) {
     width: 95%;
 }
